# avd-cli

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  claude.md  llms.txt  mkdocs.yml  pyproject.toml  tox.ini  versions.json
.claude/: settings.local.json
.claude/agents/: github-actions-architect.md  python-code-developer.md  python-code-writer.md
.githooks/: README.md  pre-push
.github/: DOCS_DEPLOYMENT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-automated.md  release.md  release.yml
.github/copilot/: copilot-instructions.md
.github/docs/: DOCKER.md  DOCKER_QUICK_START.md  DOCKER_VERSIONING.md  DOCS_DEPLOYMENT.md  release-automated.md  release.md
.github/instructions/: arista-domain.instructions.md  conventional-commit.prompt.md  github-actions-ci-cd-best-practices.instructions.md  pull-request-review.instructions.md  python.instructions.md
.github/plans/: README.md  code-refactoring-plan.md  feature-containerlab-topology-1.md  feature-improve-error-messages-1.md  feature-pyavd-version-management-1.md  refactoring-completion-summary.md
.github/prompts/: create-agentsmd.prompt.md  create-llms.prompt.md
.github/scripts/: README.md  doc-regenerate.sh  docker-build.sh  sync-python-versions.py  update_coverage_badge.py
.github/workflows/: auto-tag-release.yml  coverage-badge.yml  deploy-docs.yml  documentation.yml  pr-management.yml  pr-rebase-command.yml  pr-semantic-validation.yml  pr-triage.yml  prepare-release.yml  pull-request-rn-labeler.yml  release.yml  validate-containerlab-topology.yml
avd_cli/: __init__.py  constants.py  exceptions.py
avd_cli/cli/: __init__.py  main.py  shared.py
avd_cli/cli/commands/: __init__.py  deploy.py  generate.py  info.py  pyavd.py
avd_cli/logics/: __init__.py  anta_generator.py  base_generator.py  connection_inventory_loader.py  deployer.py  generator.py  loader.py  templating.py  topology.py
avd_cli/models/: __init__.py  connection_inventory.py  inventory.py
avd_cli/utils/: __init__.py  device_filter.py  eapi_client.py  merge.py  package_manager.py  pattern_matcher.py  schema.py  version.py
docs/: DEVELOPMENT_TOOLS.md  MIGRATION-LIMIT.md  faq.md  index.md  release-notes.md
docs/api/cli/: main.md
docs/api/logics/: generator.md  loader.md  templating.md
docs/api/models/: inventory.md
docs/api/utils/: schema.md
docs/development/: architecture.md  contributing.md  development-tools.md  testing.md
docs/examples/: advanced.md  basic.md  multi-fabric.md
docs/getting-started/: basic-usage.md  docker.md  installation.md  quickstart.md
docs/stylesheets/: extra.material.css
docs/user-guide/: configuration.md  deploy-replace-mode.md  environment-variables.md  inventory-advanced.md  inventory-structure.md  workflows.md
docs/user-guide/commands/: deploy.md  generate.md  info.md  overview.md  pyavd.md  validate.md
examples/basics/: inventory.yml
examples/basics/group_vars/: fabric.yml  leaf.yml  spine.yml
examples/cli-config-gen/: inventory.yml
examples/cli-config-gen/host_vars/: leaf1.yml  leaf2.yml  leaf3.yml  leaf4.yml  spine1.yml  spine2.yml
examples/eos-design-basics/: inventory.yml
examples/eos-design-basics/group_vars/: ATD_LAB.yml
examples/eos-design-complex/: inventory.yml
examples/eos-design-mpls/: inventory.yml
main/: 404.html  index.html  objects.inv
main/MIGRATION-LIMIT/: index.html
main/development/architecture/: index.html
main/development/contributing/: index.html
main/development/development-tools/: index.html
main/development/testing/: index.html
main/examples/advanced/: index.html
main/examples/basic/: index.html
main/examples/multi-fabric/: index.html
main/faq/: index.html
main/getting-started/basic-usage/: index.html
main/getting-started/docker/: index.html
main/getting-started/installation/: index.html
main/getting-started/quickstart/: index.html
main/release-notes/: index.html
main/search/: search_index.json
main/user-guide/configuration/: index.html
main/user-guide/deploy-replace-mode/: index.html
main/user-guide/environment-variables/: index.html
main/user-guide/inventory-structure/: index.html
main/user-guide/workflows/: index.html
spec/: README.md  data-avd-inventory-schema.md  feature-limit-filter.md  infrastructure-testing-strategy.md  process-avd-workflow.md  tool-avd-cli-architecture.md  tool-deploy-eos-command.md
tests/: conftest.py
tests/e2e/: __init__.py  test_e2e_generate_all.py
tests/helpers/: __init__.py
tests/integration/: __init__.py  conftest.py  pytest.ini  test_basic_integration.py  test_deploy_workflow.py  test_group_hierarchy_integration.py  test_multiple_parent_groups_and_dual_schema.py  test_utils.py  test_workflow_integration.py
tests/logics/: test_topology.py  test_topology_coverage.py
tests/unit/: __init__.py  test_constants.py  test_exceptions.py
tests/unit/cli/: test_commands.py  test_commands_deploy.py  test_commands_generate.py  test_commands_info.py  test_generate_module_helpers.py  test_main.py  test_main_advanced.py  test_main_generate_options.py  test_main_utils.py  test_pyavd_command.py  test_shared.py
tests/unit/logics/: test_anta_generator.py  test_base_generator.py  test_connection_inventory_loader.py  test_deployer.py  test_generator.py  test_loader.py  test_loader_advanced.py  test_templating.py  test_topology.py
tests/unit/models/: test_inventory.py  test_inventory_edge_cases.py  test_inventory_filter_devices.py
tests/unit/utils/: test_device_filter.py  test_eapi_client.py  test_eapi_client_additional.py  test_eapi_client_basics.py  test_merge.py  test_package_manager.py  test_pattern_matcher.py  test_schema.py  test_version.py
v0.1.2/: objects.inv
v0.1.2/development/contributing/: index.html
v0.1.2/development/development-tools/: index.html
v0.1.2/faq/: index.html
v0.1.2/stylesheets/: extra.material.css
v0.2.1/: 404.html  objects.inv
v0.2.1/faq/: index.html
v0.3.0/: 404.html  objects.inv
v0.3.0/search/: search_index.json
v0.3.0/stylesheets/: extra.material.css
(+97 files in other folders)
